# jarvis

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.client.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
app/: __main__.py  cli.py
app/projects/: __init__.py  models.py  repository.py
docs/: DESIGN_REFERENCES.md  GATE_2_5_INTEGRATION.md  GATE_2_7_ONBOARDING.md  GATE_3_EXECUTION.md  LIQUID_STARK_DESIGN_SYSTEM.md  NEW_USER_AUDIT.md  PRD.md  ROADMAP.md  UI_INTEGRATION_REQUESTS.md  UI_RESEARCH.md  UX_SPEC.md
docs/releases/: v0.1.0-alpha.1.md  v0.2.0-alpha.1.md
examples/: project.example.yaml
scripts/: start-alpha.mjs
src/: cli.ts
src/client/: App.tsx  components.tsx  http-service.ts  main.tsx  mock-service.ts  runtime.tsx  service.ts  styles.css
src/server/: alpha.ts  graceful-shutdown.ts  runtime-integrity.ts
src/server/database/: connection.ts  migrate.ts
src/shared/: context.ts  handoffs.ts  projects.ts  providers.ts  research.ts  runs.ts  runtime.ts
tests/: README.md  claude-code-adapter.test.ts  codex-planning-prompt.test.ts  execution-lifecycle.test.ts  gate27-onboarding.test.ts  gate31-latency.test.ts  graceful-shutdown.test.ts  handoffs.test.ts  http-api.test.ts  http-client.test.ts  liquid-stark-ui.test.ts  planning-lifecycle.test.ts  project-persistence.test.ts  provider-detection.test.ts  runtime-integrity.test.ts  test_project_persistence.py  validation-service.test.ts
(+18 files in other folders)
